[package]
name = "lazy_realpath"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lazy and symlink-safe path extensions"
homepage = "https://github.com/tesujimath/lazy-realpath"
repository = "https://github.com/tesujimath/lazy-realpath"
readme = "README.md"

[dependencies]
tempfile = "3.10.1"
test-case = "3.3.1"
