[package]
name = "real_parent"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Symlink-safe path extension for parent directory"
homepage = "https://github.com/tesujimath/real_parent"
repository = "https://github.com/tesujimath/real_parent"
readme = "README.md"

[dev-dependencies]
tempfile = "3.10.1"
test-case = "3.3.1"
walkdir = "2.5.0"
